# lakesense

./: .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_core.py
dev/bench/: data.js
examples/: quickstart.py
lakesense/: __init__.py
lakesense/core/: __init__.py  framework.py  plugin.py  result.py
lakesense/interpreter/: base.py
lakesense/interpreter/providers/: __init__.py  anthropic.py  anthropic_provider.py  openai.py  openai_provider.py
lakesense/plugins/: __init__.py  agent.py  slack.py  store.py
lakesense/plugins/tools/: __init__.py  datahub.py  slack.py
lakesense/sketches/: compute.py  merge.py  profile.py  signals.py
lakesense/sketches/providers/: __init__.py  base.py  pandas.py  spark.py  streaming.py
lakesense/storage/: duckdb.py  iceberg.py  parquet.py
tests/providers/: test_llm_providers.py  test_spark.py
tests/unit/: test_agent.py  test_core.py  test_heuristics.py  test_llm_providers.py  test_profile.py  test_sketches.py  test_slack.py  test_spark.py  test_storage.py
